# ClimateRiskScore

./: README.md  hello.py  pyproject.toml
data/: companies.csv  companies_manual.csv
notebooks/: 01_data_collection.ipynb  01_filter_companies.ipynb
